--- a/kawn_subscriptions_manager/templates/account/login.html
+++ b/kawn_subscriptions_manager/templates/account/login.html
@@ -52,7 +52,8 @@
                                 <div class="card-body">
                                     <form action="" method="post" class="form-group">
                                         {%csrf_token%}
-                                        {{form|crispy}}
+                                        {{form.login|as_crispy_field }}
+                                        {{form.password|as_crispy_field }}
                                         <input class="btn bg-gradient-info w-100 mt-2 mb-0" type="submit" value="Login">
                                     </form>
                                 </div>
