Update Template: Change ID To Slug

--- a/kawn_subscriptions_manager/templates/subscriptions/list_subscription.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/list_subscription.html
@@ -119,7 +119,7 @@
                       {% endif%}
                     </td>
                     <td class="align-middle text-center px-4">
-                      <a href="{% url 'subscriptions:detail_subscription' data.id %}"
+                      <a href="{% url 'subscriptions:detail_subscription' data.slug %}"
                         class="btn btn-sm bg-gradient-faded-info text-white text-xs">
                         Detail
                       </a>
