--- a/kawn_subscriptions_manager/templates/clients/list_outlet.html
+++ b/kawn_subscriptions_manager/templates/clients/list_outlet.html
@@ -105,9 +105,9 @@
                   <p class="text-xs font-weight-bold mb-0 text-start">{{ data.client.user.name }}</p>
                 </td>
                 <td class="align-middle text-center text-sm">
-                  <a href="{% url 'clients:update_outlet' data.id %}"
+                  <a href="{% url 'clients:update_outlet' data.slug %}"
                     class="btn btn-sm bg-warning text-white text-xs">Edit</a>
-                  <form class="d-inline" id="form-id" action="{% url 'clients:delete_outlet' data.id %}" method="post">
+                  <form class="d-inline" id="form-id" action="{% url 'clients:delete_outlet' data.slug %}" method="post">
                     {% csrf_token %}
                     </a>
                     <button type="submit" class="btn btn-sm bg-danger btn-flat show_confirm text-white"
