--- a/kawn_subscriptions_manager/templates/clients/list_outlet_client.html
+++ b/kawn_subscriptions_manager/templates/clients/list_outlet_client.html
@@ -36,7 +36,7 @@
                             <h5 class="font-weight-bolder d-inline p-lg-2">{{ name.name }}'s Outlets</h5>
                         </div>
                         <div class="d-inline">
-                            <a href="{% url 'clients:add_outlet_client' pk %}" class="btn bg-gradient-info mt-2">Add
+                            <a href="{% url 'clients:add_outlet_client' slug %}" class="btn bg-gradient-info mt-2">Add
                                 Outlet</a>
                         </div>
                     </div>
@@ -75,10 +75,10 @@
                                     <p class="text-xs font-weight-bold mb-0 text-start">{{ data.client.user.name }}</p>
                                 </td>
                                 <td class="text-center">
-                                    <a href="{% url 'clients:update_outlet_client' data.id %}"
+                                    <a href="{% url 'clients:update_outlet_client' data.slug %}"
                                         class="btn btn-sm bg-warning text-white text-xs">Edit</a>
                                     <form class="d-inline" id="form-id"
-                                        action="{% url 'clients:delete_outlet' data.id %}" method="post">
+                                        action="{% url 'clients:delete_outlet' data.slug %}" method="post">
                                         {% csrf_token %}
                                         </a>
                                         <button type="submit"
