--- a/kawn_subscriptions_manager/templates/clients/sales/list_client.html
+++ b/kawn_subscriptions_manager/templates/clients/sales/list_client.html
@@ -123,12 +123,12 @@
                                     <p class="text-xs font-weight-bold mb-0 text-start">{{ data.social_instagram|default_if_none:"-" }}</p>
                                 </td>
                                 <td>
-                                    <a href="{% url 'clients:list_outlet_client' data.id %}"
+                                    <a href="{% url 'clients:list_outlet_client' data.slug %}"
                                         class="btn btn-sm bg-info text-white text-xs">Outlet</a>
-                                    <a href="{% url 'clients:update_client' data.id %}"
+                                    <a href="{% url 'clients:update_client' data.slug %}"
                                         class="btn btn-sm bg-warning text-white text-xs">Edit</a>
                                     <form class="d-inline" id="form-id"
-                                        action="{% url 'clients:delete_client' data.id %}" method="post">
+                                        action="{% url 'clients:delete_client' data.slug %}" method="post">
                                         {% csrf_token %}
                                         </a>
                                         <button type="submit"
