--- a/kawn_subscriptions_manager/templates/subscriptions/list_approval.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/list_approval.html
@@ -66,23 +66,11 @@
                   {% endif%}
                 </td>
                 <td class="align-middle text-center px-4">
-                  <a href="{% url 'subscriptions:detail_approval' data.id %}"
+                  <a href="{% url 'subscriptions:detail_approval' data.slug %}"
                     class="btn btn-sm bg-gradient-faded-info text-white text-xs">
                     Detail
                   </a>
                 </td>
-
-                {% comment %}
-                <td class="align-middle text-center px-4">
-                  {% if data.active is not None and data.is_approved == None %}
-                  <a href="{% url 'subscriptions:accept_subscription' data.id %}"
-                    class="btn btn-sm bg-success text-white text-xs">Accept</a>
-                  <a href="{% url 'subscriptions:decline_subscription' data.id %}"
-                    class="btn btn-sm bg-danger text-white text-xs">Decline</a>
-                  {% endif%}
-                </td>
-                {% endcomment %}
-
               </tr>
               {% empty %}
               <tr class="text-center">
