--- a/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/list_subscription_plan.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/list_subscription_plan.html
@@ -126,19 +126,19 @@
                 </td>
                 <td class="align-middle">
                   <div class="d-inline">
-                    <a href="{% url 'subscriptions:update_subscription_plan' data.id %}"
+                    <a href="{% url 'subscriptions:update_subscription_plan' data.slug %}"
                       class="btn btn-sm bg-warning text-white text-xs" title='Edit'>Edit</a>
                     {% if data.is_active %}
-                    <a href="{% url 'subscriptions:deactivate_subscription_plan' data.id %}"
+                    <a href="{% url 'subscriptions:deactivate_subscription_plan' data.slug %}"
                       class="btn btn-sm bg-danger text-white text-xs" title='Deactivate'>Deactivate</a>
                     {% else %}
-                    <a href="{% url 'subscriptions:activate_subscription_plan' data.id %}"
+                    <a href="{% url 'subscriptions:activate_subscription_plan' data.slug%}"
                       class="btn btn-sm bg-info text-white text-xs" title='Activate'>Activate</a>
                     {% endif %}
                   </div>
                   {% if data.is_active == False %}
                   <form class="d-inline" id="form-id"
-                    action="{% url 'subscriptions:delete_subscription_plan' data.id %}" method="post">
+                    action="{% url 'subscriptions:delete_subscription_plan' data.slug %}" method="post">
                     {% csrf_token %}
                     </a>
                     <button type="submit" class="btn btn-sm bg-danger show_confirm text-white text-xs"
