--- a/kawn_subscriptions_manager/templates/clients/sales/form_outlet.html
+++ b/kawn_subscriptions_manager/templates/clients/sales/form_outlet.html
@@ -29,7 +29,9 @@
                                 {% csrf_token %}
                                 <input type="hidden" name="next" value="{{ next }}">
                                 {{ form|crispy }}
-                                <button type="submit" class="btn bg-info col-md-2 mt-4 mb-0 text-white">SAVE</button>
+                                <button type="submit" class="btn bg-gradient-info col-md-2 mt-4 mb-0">SAVE</button>
+                                <a href="javascript:history.back()"
+                                    class="btn bg-danger col-md-2 mt-4 mb-0 text-white">CANCEL</a>
                             </form>
                         </div>
                     </div>
