--- a/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/sales/list_subscription_plan.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/sales/list_subscription_plan.html
@@ -31,7 +31,7 @@
         <div class="col-lg-12 mb-4 mt-2">
           <div class="align-middle">
             <h5 class="font-weight-bolder">Susbcription Plans</h5>
-            <button type="button" class="btn bg-gradient-dark align-middle col-md-2 mt-2" data-bs-toggle="modal"
+            <button type="button" class="btn bg-gradient-info align-middle col-md-2 mt-2" data-bs-toggle="modal"
               data-bs-target="#exampleModal">
               Advanced Search
             </button>
@@ -57,7 +57,7 @@
                             {{ subscription_plan_filter.form.is_active|as_crispy_field }}
                           </div>
                           <div class="modal-footer">
-                            <button class="btn bg-secondary">
+                            <button class="btn bg-danger">
                               <a href="{% url 'subscriptions:list_subscription_plan' %}" class="text-white">
                                 Clear Filter
                               </a>
