--- a/kawn_subscriptions_manager/templates/clients/form_client.html
+++ b/kawn_subscriptions_manager/templates/clients/form_client.html
@@ -17,7 +17,7 @@
                                 {% csrf_token %}
                                 <input type="hidden" name="next" value="{{ next }}">
                                 {{ form|crispy }}
-                                <button type="submit" class="btn bg-info col-md-2 mt-4 mb-0 text-white">SAVE</button>
+                                <button type="submit" class="btn bg-gradient-info col-md-2 mt-4 mb-0">SAVE</button>
                                 <a href="{% url 'clients:list_client'  %}"
                                     class="btn bg-danger col-md-2 mt-4 mb-0 text-white">CANCEL</a>
                             </form>
