--- a/kawn_subscriptions_manager/templates/clients/sales/list_client.html
+++ b/kawn_subscriptions_manager/templates/clients/sales/list_client.html
@@ -31,7 +31,7 @@
                         <div class="align-middle">
                             <h5 class="font-weight-bolder">Clients</h5>
                             <a href="{% url 'clients:add_client' %}" class="btn bg-gradient-info mt-2">Add Client</a>
-                            <button type="button" class="btn bg-gradient-dark align-middle col-md-2 mt-2"
+                            <button type="button" class="btn bg-gradient-info align-middle col-md-2 mt-2"
                                 data-bs-toggle="modal" data-bs-target="#exampleModal">
                                 Advanced Search
                             </button>
@@ -55,7 +55,7 @@
                                                             {{ myFilter.form.address|as_crispy_field }}
                                                         </div>
                                                         <div class="modal-footer">
-                                                            <button class="btn bg-secondary">
+                                                            <button class="btn bg-danger">
                                                                 <a href="{% url 'clients:list_client' %}"
                                                                     class="text-white">
                                                                     Clear Filter
