--- a/kawn_subscriptions_manager/templates/subscriptions/activity_logs_modified.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/activity_logs_modified.html
@@ -39,15 +39,11 @@
                 </h6>
                 <a href="{% url 'subscriptions:activity_logs_created'%}" class="btn btn-sm btn-outline-success col-md-3 mt-2 mb-1">Created</a>
                 <a href="{% url 'subscriptions:activity_logs_modified'%}" class="btn btn-sm btn-outline-warning col-md-3 mt-2 mb-1">Modified</a>
-                <!-- <p class="text-sm">
-                    <i class="fa fa-arrow-up text-success" aria-hidden="true"></i>
-                    <span class="font-weight-bold">24%</span> this month
-                </p> -->
             </div>
             
             <div class="card-body p-3">
                 <div class="mt-2 mb-2 p-2">
-                    <a class="btn btn-sm bg-gradient-dark text-start" data-bs-toggle="modal"
+                    <a class="btn btn-sm bg-gradient-info text-start" data-bs-toggle="modal"
                         data-bs-target="#exampleModal">
                         <i class="fa-solid fa-filter"></i> Filter
                     </a>
@@ -69,7 +65,7 @@
                                                     {{ myFilter.form.subscriptionplan|as_crispy_field }}
                                                 </div>
                                                 <div class="modal-footer">
-                                                    <button class="btn bg-secondary">
+                                                    <button class="btn bg-danger">
                                                         <a href="{% url 'subscriptions:activity_logs_modified' %}" class="text-white">
                                                             Clear Filter
                                                         </a>
