--- a/kawn_subscriptions_manager/templates/subscriptions/list_subscription.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/list_subscription.html
@@ -29,46 +29,45 @@
                 aria-hidden="true">&times;</span></button>
           </div>
           {% endfor %}
-          <div class="align-middle">
-            <h5 class="font-weight-bolder">Subcriptions</h5>
-          </div>
-
           <div class="col-lg-12 mb-4 mt-2">
-            <button type="button" class="btn bg-gradient-dark align-middle col-md-2" data-bs-toggle="modal"
-              data-bs-target="#exampleModal">
-              Advanced Search
-            </button>
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-              aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Advanced Search</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body">
-                    <div class="col-lg-12">
-                      <form method="get">
-                        <div class="row">
-                          <div>
-                            {{ subscription_filter.form.subscriptionplan|as_crispy_field }}
+            <div class="align-middle">
+              <h5 class="font-weight-bolder">Subcriptions</h5>
+              <button type="button" class="btn bg-gradient-info align-middle col-md-2" data-bs-toggle="modal"
+                data-bs-target="#exampleModal">
+                Advanced Search
+              </button>
+              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">Advanced Search</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <div class="col-lg-12">
+                        <form method="get">
+                          <div class="row">
+                            <div>
+                              {{ subscription_filter.form.subscriptionplan|as_crispy_field }}
+                            </div>
+                            <div>
+                              {{ subscription_filter.form.expires|as_crispy_field }}
+                            </div>
+                            <div>
+                              {{ subscription_filter.form.active|as_crispy_field }}
+                            </div>
+                            <div class="modal-footer">
+                              <button class="btn bg-danger">
+                                <a href="{% url 'subscriptions:list_subscription' %}" class="text-white">
+                                  Clear Filter
+                                </a>
+                              </button>
+                              <button class="btn bg-gradient-info" type="submit">Filter</button>
+                            </div>
                           </div>
-                          <div>
-                            {{ subscription_filter.form.expires|as_crispy_field }}
-                          </div>
-                          <div>
-                            {{ subscription_filter.form.active|as_crispy_field }}
-                          </div>
-                          <div class="modal-footer">
-                            <button class="btn bg-secondary">
-                              <a href="{% url 'subscriptions:list_subscription' %}" class="text-white">
-                                Clear Filter
-                              </a>
-                            </button>
-                            <button class="btn bg-gradient-info" type="submit">Filter</button>
-                          </div>
-                        </div>
-                      </form>
+                        </form>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -77,67 +76,63 @@
           </div>
         </div>
       </div>
-      <section class="section">
-        <div class="card">
-          <div class="card-body">
-            <div class="table-responsive">
-              <table class="table table-sm" id="table1">
-                <thead>
-                  <tr>
-                    <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 23%;">Outlet Name</th>
-                    <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 16%;">Subscription
-                      Plan</th>
-                    <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 16%;">Billing
-                      Date</th>
-                    <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 16%;">Expired
-                      Date</th>
-                    <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 13%;">Status</th>
-                    <th class="text-uppercase text-xs text-dark font-weight-bolder text-center" style="width: 16%;">
-                      Action</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  {% for data in object_list %}
-                  <tr>
-                    <td class="align-middle text-sm px-4">
-                      <p class="text-xs font-weight-bold mb-0">{{ data.outlet.name }} </p>
-                    </td>
-                    <td class="align-middle text-sm px-4">
-                      <p class="text-xs font-weight-bold mb-0">{{ data.subscriptionplan.name }}</p>
-                    </td>
-                    <td data-sort="{{ data.billing_date | date:'Ymd' }}" class="align-middle text-sm px-4">
-                      <p class="text-xs font-weight-bold mb-0 text-end">{{ data.billing_date|default_if_none:"-"|date:'D, d M Y' }}</p>
-                    </td>
-                    <td data-sort="{{ data.expires | date:'Ymd' }}" class="align-middle text-sm px-4">
-                      <p class="text-xs font-weight-bold mb-0 text-end">{{ data.expires|date:'D, d M Y' }}</p>
-                    </td>
-                    <td class="align-middle text-sm px-4">
-                      {% if data.active == True %}
-                      <p class="text-xs font-weight-bold mb-0 text-start">Active</p>
-                      {% else %}
-                      <p class="text-xs font-weight-bold mb-0 text-start">Not Active</p>
-                      {% endif%}
-                    </td>
-                    <td class="align-middle text-center px-4">
-                      <a href="{% url 'subscriptions:detail_subscription' data.slug %}"
-                        class="btn btn-sm bg-gradient-faded-info text-white text-xs">
-                        Detail
-                      </a>
-                    </td>
-                  </tr>
-                  {% empty %}
-                  <tr class="text-center">
-                    <td colspan="8" class="align-middle text-center text-sm">
-                      <p class="text-xs font-weight-bold mb-0">No Item in List</p>
-                    </td>
-                  </tr>
-                  {% endfor %}
-                </tbody>
-              </table>
-            </div>
-          </div>
+      <div class="card-body">
+        <div class="table-responsive">
+          <table class="table table-sm" id="table1">
+            <thead>
+              <tr>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 23%;">Outlet Name</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 16%;">Subscription
+                  Plan</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 16%;">Billing
+                  Date</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 16%;">Expired
+                  Date</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 13%;">Status</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder text-center" style="width: 16%;">
+                  Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for data in object_list %}
+              <tr>
+                <td class="align-middle text-sm px-4">
+                  <p class="text-xs font-weight-bold mb-0">{{ data.outlet.name }} </p>
+                </td>
+                <td class="align-middle text-sm px-4">
+                  <p class="text-xs font-weight-bold mb-0">{{ data.subscriptionplan.name }}</p>
+                </td>
+                <td data-sort="{{ data.billing_date | date:'Ymd' }}" class="align-middle text-sm px-4">
+                  <p class="text-xs font-weight-bold mb-0 text-end">{{ data.billing_date|default_if_none:"-"|date:'D, d M Y' }}</p>
+                </td>
+                <td data-sort="{{ data.expires | date:'Ymd' }}" class="align-middle text-sm px-4">
+                  <p class="text-xs font-weight-bold mb-0 text-end">{{ data.expires|date:'D, d M Y' }}</p>
+                </td>
+                <td class="align-middle text-sm px-4">
+                  {% if data.active == True %}
+                  <p class="text-xs font-weight-bold mb-0 text-start">Active</p>
+                  {% else %}
+                  <p class="text-xs font-weight-bold mb-0 text-start">Not Active</p>
+                  {% endif%}
+                </td>
+                <td class="align-middle text-center px-4">
+                  <a href="{% url 'subscriptions:detail_subscription' data.slug %}"
+                    class="btn btn-sm bg-gradient-faded-info text-white text-xs">
+                    Detail
+                  </a>
+                </td>
+              </tr>
+              {% empty %}
+              <tr class="text-center">
+                <td colspan="8" class="align-middle text-center text-sm">
+                  <p class="text-xs font-weight-bold mb-0">No Item in List</p>
+                </td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
         </div>
-      </section>
+      </div>
     </div>
   </div>
 </div>
