--- a/kawn_subscriptions_manager/templates/users/admin/add_users.html
+++ b/kawn_subscriptions_manager/templates/users/admin/add_users.html
@@ -18,7 +18,8 @@
                 {% csrf_token %}
                 <input type="hidden" name="next" value="{{ next }}">
                 {{ form|crispy }}
-                <button type="submit" class="btn bg-gradient-info w-100 mt-4 mb-0">ADD</button>
+                <button type="submit" class="btn bg-gradient-info col-md-2 mt-4 mb-0">SAVE</button>
+                <a href="{% url 'users:user_list' %}" class="btn bg-danger col-md-2 mt-4 mb-0 text-white">CANCEL</a>
               </form>
             </div>
           </div>
