--- a/kawn_subscriptions_manager/templates/clients/sales/list_client.html
+++ b/kawn_subscriptions_manager/templates/clients/sales/list_client.html
@@ -30,7 +30,6 @@
                     <div class="col-lg-12 mb-4 mt-2">
                         <div class="align-middle">
                             <h5 class="font-weight-bolder">Clients</h5>
-                            <a href="{% url 'clients:add_client' %}" class="btn bg-gradient-info mt-2">Add Client</a>
                             <button type="button" class="btn bg-gradient-info align-middle col-md-2 mt-2"
                                 data-bs-toggle="modal" data-bs-target="#exampleModal">
                                 Advanced Search
@@ -94,7 +93,7 @@
                                     Twitter</th>
                                 <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 9%;">
                                     Instagram</th>
-                                <th class="text-center text-uppercase text-xxs font-weight-bolder" style="width: 20%;">
+                                <th class="text-center text-uppercase text-xxs text-dark font-weight-bolder" style="width: 20%;">
                                     Action</th>
                             </tr>
                         </thead>
@@ -122,19 +121,9 @@
                                 <td class="px-4">
                                     <p class="text-xs font-weight-bold mb-0 text-start">{{ data.social_instagram|default_if_none:"-" }}</p>
                                 </td>
-                                <td>
+                                <td class="text-center">
                                     <a href="{% url 'clients:list_outlet_client' data.slug %}"
                                         class="btn btn-sm bg-info text-white text-xs">Outlet</a>
-                                    <a href="{% url 'clients:update_client' data.slug %}"
-                                        class="btn btn-sm bg-warning text-white text-xs">Edit</a>
-                                    <form class="d-inline" id="form-id"
-                                        action="{% url 'clients:delete_client' data.slug %}" method="post">
-                                        {% csrf_token %}
-                                        </a>
-                                        <button type="submit"
-                                            class="btn btn-sm bg-danger btn-flat show_confirm text-white"
-                                            data-toggle="tooltip" title='Delete'>Delete</button>
-                                    </form>
                                 </td>
                             </tr>
                             {% empty %}
